<resources>
    <string name="app_name">GIVMED</string>
    <string name="number">Νούμερο</string>
    <string name="confirm">Επιβεβαίωση</string>
    <string name="inputter">Εισαγωγή</string>
    <string name="scan">Σάρωση</string>
    <string name="scan_barcodes">Σάρωση Barcodes</string>
    <string name="outputer">Καταχώρηση</string>
    <string name="two_buttons">Επιλογή</string>
    <string name="farmako">Φάρμακο</string>
    <string name="elleipseis">Ελλείψεις</string>
    <string name="tropos_paradoshs">Τρόπος Παράδοσης</string>
    <string name="user">Μόνος Μου</string>
    <string name="volunteer">Εθελοντής</string>
    <string name="dwrees">Δωρεές</string>
    <string name="farmakeio">Φαρμακείο</string>
    <string name="register">Eγγραφή</string>
    <string name="profile">Profile</string>
    <string name="settings">Ρυθμίσεις</string>
    <string name="share">Κοινοποίηση</string>
    <string name="communication">Επικοινωνία</string>
    <string name="odhgies">Οδηγίες</string>
    <string name="faq">F.A.Q.</string>
    <string name="oroi_xrhshs">Όροι χρήσης</string>
    <string name="personal_pharmacy">Προσωπικό Φαρμακείο</string>
    <string name="register_med">Καταχώρηση Φαρμάκου</string>
    <string name="out_med_name">Όνομα Φαρμάκου</string>
    <string name="out_expiration">Ημ. λήξης</string>
    <string name="out_barcode">Barcode</string>
    <string name="out_condition">Κατάσταση Φαρμάκου</string>
    <string name="out_open">ΑΝΟΙΧΤΟ</string>
    <string name="out_closed">ΚΛΕΙΣΤΟ</string>
    <string name="out_notes">Σημειώσεις</string>
    <string name="out_med_registered">Το φάρμακο έχει ήδη καταχωρηθεί!</string>
    <string name="out_donation">Δωρεά Φαρμάκου</string>
    <string name="out_now">ΑΜΕΣΑ</string>
    <string name="out_before">ΠΡΙΝ ΛΗΞΕΙ</string>
    <string name="out_category">Kατηγορία</string>
    <string name="out_is_sirup">Δυστυχώς επειδή το φάρμακο είναι ανοιχτό, δεν μπορεί να το δεχτεί κανένας φορέας.</string>
    <string name="out_matched_left">Υπάρχει έλλειψη σε</string>
    <string name="out_matched_right">. Κανόνισε τη δωρεά σου!</string>
    <string name="out_unmatched">Υπάρχει προγραμματισμένη δωρεά γι’αυτό το φάρμακο! Θέλεις να ακυρωθεί;</string>
    <string name="out_unmatched_sirup">Κανένας φορέας δε δέχεται αυτό το φάρμακο ανοιχτό, άρα η προγραμματισμένη δωρεά πρέπει να ακυρωθεί.</string>
    <string name="home_message">Δες πόσα φάρμακα έχεις στο σπίτι σου, παρακάτω!</string>
    <string name="pharm_left_half_msg">Έχεις καταχωρήσει</string>
    <string name="pharm_right_half_msg_plural">φάρμακα!</string>
    <string name="pharm_right_half_msg_single">φάρμακo!</string>
    <string name="naming_caps">ΟΝΟΜΑΣΙΑ</string>
    <string name="expire_caps">ΗΜ. ΛΗΞΗΣ</string>
    <string name="delete_med">Διαγραφή φαρμάκου</string>
    <string name="delete_sure">Είστε σίγουρος οτι θέλετε να διαγραφεί;</string>
    <string name="donation_med_left">Μπράβο! Μέχρι τώρα έχεις κάνει</string>
    <string name="donation_values">δωρεές αξίας</string>
    <string name="donation_value">δωρεά αξίας</string>
    <string name="donation_euros">ευρώ!</string>
    <string name="donation_done_rights">από τα φάρμακά σου βρίσκονται σε έλλειψη!</string>
    <string name="donation_done_right">από τα φάρμακά σου βρίσκεται σε έλλειψη!</string>
    <string name="donation_choose_msg">Επίλεξε ποιό θέλεις να δωρίσεις πρώτο από την παρακάτω λίστα.</string>
    <string name="donation_done_zero">Δεν έχει ολοκληρωθεί ακόμα κάποια δωρεά.</string>
    <string name="donation_prog_zero">Κανένα από τα φάρμακά σου δεν βρίσκεται σε έλλειψη!</string>
    <string name="scheduled">Προγραμματισμενες</string>
    <string name="done">Ολοκληρωμενες</string>
    <string name="farmako_caps">ΦΑΡΜΑΚΟ</string>
    <string name="perioxh_caps">ΠΕΡΙΟΧΗ</string>
    <string name="date_caps">ΗΜ/ΝΙΑ</string>
    <string name="push">Βρέθηκε έλλειψη στο φάρμακο</string>
    <string name="choo_left_first_msg">Κάποιος συνάνθρωπός σου</string>
    <string name="choo_right_first_msg">έχει ανάγκη τη δωρεά σου!</string>
    <string name="choo_second_msg">Πώς θέλεις να φθάσουν τα φάρμακά σου σε αυτόν;</string>
    <string name="choo_pharm_msg">Διάλεξε τον φορέα που θέλεις να δωρίσεις το φαρμακό σου:</string>
    <string name="user_btn">Θα το πάω εγώ!</string>
    <string name="volu_btn">Θέλω να σταλεί με εθελοντή</string>
    <string name="choo_cng_msg">Μπορείς να αλλάξεις τον τρόπο μεταφοράς ανα πάσα στιγμή από το menu Προγραμματισμένες Δωρεές</string>
    <string name="choo_foreas">Φορέας</string>
    <string name="choo_phone">Τηλέφωνο</string>
    <string name="choo_pick_date">Ημ. Παράδοσης</string>
    <string name="choo_delivered">Το παρέδωσα!</string>
    <string name="choo_want_volu">Θέλω να σταλεί με εθελοντή</string>
    <string name="choo_volu_msg">Δεν μπορείς τελικά; Ζήτα κάποιον από το δίκτυό μας να σε βοηθήσει!</string>
    <string name="choo_user_first">Οι άνθρωποι στον επωφελούμενο φορέα σε περιμένουν!</string>
    <string name="choo_user_second">Μέχρι πότε θα μπορούσες να το πας μέσα στις επόμενες 20 μέρες;</string>
    <string name="choo_user_delivery">Όλη η κοινότητα του GIVMED είναι περήφανη για σένα! Συνέχισε έτσι!</string>
    <string name="choo_volu_first">Δεν χρειάζεται να κάνεις τίποτα άλλο!</string>
    <string name="choo_volu_second">Επίλεξε τις ημέρες που μπορεί να το παραλάβει κάποιος εθελοντής.</string>
    <string name="choo_add_dates"><u>Πρόσθεσε ημερομηνίες</u></string>
    <string name="choo_picked_up">Παραλήφθηκε!</string>
    <string name="choo_addr">Διέυθυνση (Οδός, Περιοχή, Τ.Κ.)</string>
    <string name="choo_monos_eyxaristoume">Σε ευχαριστούμε! Για οποιοδήποτε θέμα μην διστάσεις να επικοινωνήσεις μαζί μας!</string>
    <string name="choo_volu_call">Μπράβο σου!\nΜέσα στις επόμενες ώρες θα σε ενημερώσουμε για την ακριβή μέρα καί ώρα που θα έρθουμε για την παραλαβή!</string>
    <string name="choo_done_volu_msg">Ευχαριστούμε! Η δωρεά σου έφτασε σε κάποιον που την έχει ανάγκη.</string>
    <string name="choo_date">Επέλεξε ημερομηνία!</string>
    <string name="choo_one_date">Χρειαζόμαστε τουλάχιστον μια διαθέσιμη ημερομηνία για να κανονίσουμε την μεταφορά.</string>
    <string name="choo_empty_address">Χρειαζόμαστε τη διεύθυνσή σου για να κανονίσουμε την μεταφορά.</string>
    <string name="choo_after3_date">Επίλεξε μια ημερομηνία τουλάχιστον 3 ημέρες από σήμερα.</string>
    <string name="choo_after20_date">H ημερομηνία που διάλεξες είναι μετά από 20 μέρες!</string>
    <string name="choo_before_date">Η ημερομηνία που διάλεξες είναι παλία!</string>
    <string name="choo_before_done">Είσαι σίγουρος;</string>
    <string name="two_btn_first_msg">Καταχώρησε τα φάρμακά σου!</string>
    <string name="two_btn_second_msg">Βρες το αυτοκόλλητο πάνω στο κουτί και σκάναρε το barcode ή πληκτρολόγησε τον κάθετο κωδικό.</string>
    <string name="scan_button">Σκάναρε</string>
    <string name="input_button">Πληκτρολόγησε</string>
    <string name="im_fine_first_msg">Αποθηκεύτηκε!</string>
    <string name="im_fine_second_msg">Έχεις άλλα φάρμακα για καταχώρηση;</string>
    <string name="yes">Ναι!</string>
    <string name="no_im_good">Όχι, είμαι εντάξει!</string>
    <string name="br_first_msg_blue">Επίλεξε τα φάρμακα που θέλεις να δωρίσεις άμεσα με μπλε!</string>
    <string name="br_first_msg_red">Επίλεξε τα φάρμακα που θέλεις να δωρίσεις 3 μήνες πριν λήξουν με κόκκινο!</string>
    <string name="br_change_later">Μπορείς να αλλάξεις την επιλογή σου οποιαδήποτε στιγμή από το προσωπικό σου φαρμακείο.</string>
    <string name="br_donation">ΔΩΡΕΑ:</string>
    <string name="br_now">ΑΜΕΣΗ</string>
    <string name="br_exp">3 ΜΗΝΕΣ ΠΡΙΝ ΛΗΞΟΥΝ</string>
    <string name="matching">Γίνεται αντιστοίχηση των φαρμάκων σας με τις υπάρχουσες ελλείψεις...</string>
    <string name="update">Γίνεται αναζήτηση ελλείψεων...</string>
    <string name="after_no_matching">Κανένα φάρμακό από αυτά που θέλεις να δωρίσεις τώρα δεν υπάρχει σε έλλειψη. Μόλις προστεθεί έλλειψη θα σε ενημερώσουμε.</string>
    <string name="after_matching_left">Σε ευχαριστούμε!</string>
    <string name="after_matching_right">από τα φάρμακα που καταχώρησες χρειάζονται κάπου! Κανόνισε πως θα φτάσουν στον προορισμό τους!</string>
    <string name="region">Περιοχή</string>
    <string name="need_your_help">Η βοήθειά σου είναι πολύ σημαντική!</string>
    <string name="need_left_half_msg">Αυτή τη στιγμή υπάρχουν ελλείψεις σε</string>
    <string name="need_right_half_msg_plural">φάρμακα! Έχεις κάποιο από αυτά; Δώρισέ το!</string>
    <string name="need_right_half_msg_single">φάρμακo! Άν το έχεις, δώρισέ το.</string>
    <string name="prof_name">Username</string>
    <string name="prof_name_warning">Λάθος username</string>
    <string name="prof_name_exists">Το username υπάρχει ήδη!</string>
    <string name="prof_sex">Φύλο</string>
    <string name="prof_birth_date">Έτος Γέννησης</string>
    <string name="prof_get_old_data">Φορτώστε τα δεδομένά σας!</string>
    <string name="prof_get_old_data_no_internet">Aπαιτείται πρόσβαση στο Internet για την ανάκληση των δεδομένων σας!Προσπαθήστε αργότερα!</string>
    <string name="prof_email">Email</string>
    <string name="prof_email_warning">Λάθος email</string>
    <string name="prof_age_warning">Λόγω των όρων χρήσης μας, μόνο άτομα άνω των 18 μπορούν να χρησιμοποιήσουν το GIVMED!</string>
    <string name="prof_allowed_chars">Επιτρεπτοί χαρακτήρες A-Z a-z 0-9 @ + . -</string>
    <string name="your_phone">Συμπλήρωσε τον αριθμό σου</string>
    <string name="accept_terms">Αποδέχομαι τους όρους</string>
    <string name="set_msg1">Ειδοποιήσεις</string>
    <string name="set_msg2">Να επιτρέπεται η εφαρμογή να σου στέλνει ειδοποιήσεις για τα φάρμακα</string>
    <string name="version">Έκδοση</string>
    <string name="set_yes">ΝΑΙ</string>
    <string name="set_no">ΟΧΙ</string>
    <string name="num_are_you_ready">Είσαι έτοιμος να κάνεις την πρώτη σου δωρεά;</string>
    <string name="num_insert_phone">Πληκτρολόγησε τον αριθμό του κινητού σου για να συνεχίσουμε.</string>
    <string name="num_accept_licence">Συνεχίζοντας αποδέχεσαι τους όρους <u>Όρους Χρήσης</u></string>
    <string name="num_alert">Για λόγους αξιοπιστίας, πρέπει να επιβεβαιώσουμε τον λογαριασμό σου με τον αριθμό του κινητού σου.</string>
    <string name="num_sure_left">Έχετε εισάγει σωστά τον αριθμό σας;</string>
    <string name="num_sure_right">Ένα μήνυμα με τον 4ψήφιο κωδικό επιβεβαίωσης θα σταλεί σε αυτόν τον αριθμό.</string>
    <string name="conf_welcome">Καλώς ήρθες!</string>
    <string name="conf_insert_pin">Πληκτρολόγησε τον αριθμό PIN που έλαβες στο</string>
    <string name="conf_send_again"><u>Αποστολή ξανά</u></string>
    <string name="conf_error"><b>Μη έγκυρος αριθμός!</b></string>
    <string name="conf_wrong_pin"><b>Λάθος PIN!</b></string>
    <string name="fill_all_boxes">Πρέπει να συμπληρώσετε όλα τα κουτιά!</string>
    <string name="conf_second_msg">Αν ο αριθμός</string>
    <string name="conf_second_msg2">αντιστοιχεί σε αυτή τη συσκευή, η διαδικασία θα ολοκληρωθεί αυτόματα. Διαφορετικά, παρακαλούμε πληκτρολογήστε τον κωδικό που λάβατε με SMS.</string>
    <string name="conf_second_msg_api6">Παρακαλούμε πληκτρολογήστε τον κωδικό που λάβατε με SMS.</string>
    <string name="med_name_drastikh">Όνομα Φαρμάκου/Δραστική Ουσία</string>
    <string name="tuto_layout1_msg">"Γίνε μέλος της GIVMED κοινότητας.\n Σώσε μια ζωή, σήμερα.</string>
    <string name="step1">Βήμα 1</string>
    <string name="step2">Βήμα 2</string>
    <string name="step3">Βήμα 3</string>
    <string name="tuto_layout3_msg1">Πότε θέλεις να τα δωρίσεις;</string>
    <string name="tuto_layout3_msg2">Μπλε τικ: Αμέσως!\nΚόκκινο τικ: 3 μήνες πριν λήξουν.\nΌσα δεν επιλέξεις θα είναι στο προσωπικό σου φαρμακείο.</string>
    <string name="tuto_layout4_msg1">Ήρθε η ώρα της δωρεάς!</string>
</resources>