<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.givmed.android.DisplayMed">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool_bar"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:theme="@style/MyEditTextTheme">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/out_med_name"
                    android:textSize="24sp"
                    android:drawableStart="@drawable/ic_med_name"
                    android:drawableLeft="@drawable/ic_med_name"
                    android:theme="@style/MyEditTextTheme">
                </EditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/categoryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameLayout"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:theme="@style/MyEditTextTheme">

                <EditText
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/out_category"
                    android:textSize="24sp"
                    android:drawableStart="@drawable/ic_category"
                    android:drawableLeft="@drawable/ic_category"
                    android:theme="@style/MyEditTextTheme">
                </EditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/expirationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoryLayout"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:theme="@style/MyEditTextTheme">

                <EditText
                    android:id="@+id/expiration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/out_expiration"
                    android:textSize="24sp"
                    android:drawableStart="@drawable/ic_calendar"
                    android:drawableLeft="@drawable/ic_calendar"
                    android:theme="@style/MyEditTextTheme">
                </EditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/barcodeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/expirationLayout"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:theme="@style/MyEditTextTheme" >

                <EditText
                    android:id="@+id/barcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/out_barcode"
                    android:textSize="24sp"
                    android:drawableStart="@drawable/ic_barcode"
                    android:drawableLeft="@drawable/ic_barcode" >
                </EditText>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/conditionMsg"
                android:layout_below="@id/barcodeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_condition"
                android:textSize="24sp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:drawableStart="@drawable/ic_elleipseis"
                android:drawableLeft="@drawable/ic_elleipseis"
                android:theme="@style/MyEditTextTheme">
            </TextView>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/conditionGroup"
                android:layout_below="@id/conditionMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:padding="@dimen/padding"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/closed"
                    android:text="@string/out_closed"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:background="@drawable/button_gray_unpressed" />

                <Button
                    android:id="@+id/opend"
                    android:text="@string/out_open"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:background="@drawable/button_gray_unpressed" />
            </LinearLayout>

            <TextView
                android:id="@+id/donationMsg"
                android:layout_below="@id/conditionGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_donation"
                android:textSize="24sp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:drawableStart="@drawable/ic_dwrees"
                android:drawableLeft="@drawable/ic_dwrees"
                android:theme="@style/MyEditTextTheme">
            </TextView>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/donationGroup"
                android:layout_below="@id/donationMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:padding="@dimen/padding"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/now"
                    android:text="@string/out_now"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:background="@drawable/button_gray_unpressed" />

                <Button
                    android:id="@+id/before"
                    android:text="@string/out_before"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:background="@drawable/button_gray_unpressed" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/notesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/donationGroup"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:theme="@style/MyEditTextTheme" >

                <EditText
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/out_notes"
                    android:textSize="24sp"
                    android:maxLength="130"
                    android:drawableStart="@drawable/ic_notes"
                    android:drawableLeft="@drawable/ic_notes"
                    android:theme="@style/MyEditTextTheme" >
                </EditText>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/notesLayout" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
